src/app/pages/about-us/about-us.page.scss
a{
  color: #FFFFFF;
}

.about-us-teams-team {
  margin-top: 14px;
}

.about-us-container {
  margin-top: 64px;
}


.about-us-layout-1 {
  display: flex;

  & > div {
    width: 50%;
    padding: 18px;
    box-sizing: border-box;

    & p {
      margin-top: 32px;
    }
  }
}

.about-us-layout-2 {
  margin-top: 132px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-column-gap: 32px;

  & h4 {
    font-style: italic;
  }
}

.about-us-layout-3 {
  margin-top: 132px;
  display: flex;

  & > div {
    width: 50%;
  }

  & .images img {
    margin-right: 32px;
  }
}

.sm-figure {
  visibility: hidden;
}

.about-us-image {
  width: 100%;
}

.image-line-group {
  & img {
    width: 100%;
  }
  & a {
    display: inline-block;
  }

  border: 1px solid red;
  width: 100%;

  & .image-line-1 {
    display: grid;
    grid-template-columns: 16fr 23fr 32fr 34fr;
    grid-column-gap: 8px;

  }
  & .image-line-2 {
    display: grid;
    grid-template-columns: 22fr 17fr 17fr 11fr 21fr;
    grid-column-gap: 8px;
    margin-top: 5px;
  }

  & .image-line-3 {
    display: grid;
    grid-template-columns: 30fr 33fr 35fr;
    grid-column-gap: 8px;
    margin-top: 8px;
  }

  & .image-line-4 {
    display: grid;
    grid-template-columns: 50fr 52fr;
    grid-column-gap: 8px;
  }

  & .image-line-5 {
    display: grid;
    grid-template-columns: 20fr 78fr;
    grid-column-gap: 8px;
    margin-top: 8px;
  }
}

@media screen and (max-width: 992px) {
  .about-us-layout-2 {
    grid-template-columns: 1fr 1fr 1fr;
    grid-row-gap: 32px;
  }

  .sm-figure {
    visibility: visible;
  }
}

@media screen and (max-width: 992px) and (min-width: 576px){
  .lg-figure {
    display: none;
  }
}

@media screen and (max-width: 768px) {
  .about-us-layout-2 {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (max-width: 576px) {
  .about-us-layout-1 {
    display: block;

    & > div {
      width: 100%;
    }
  }

  .about-us-layout-2 {
    grid-template-columns: 1fr;
  }

  .about-us-layout-3 {
    display: block;

    & .images {
      margin-top: 64px;
    }
  }
}

